Oops, removed y scrollbar. fixed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,7 +36,6 @@ $world-height: 215px;
 %absolute{
 	position: absolute;
 	padding: 0;
-	overflow: hidden;
 	top: 0;
 	bottom: 0;
 	left: 0;
@@ -64,6 +63,7 @@ ol{
     list-style-type: none;
 	bottom: 0px;
 	top: 2em;
+	overflow-y: auto;
 	max-height: 100%;
 	li{
 		@extend %whitespace;
